Replace Arrays.asList() with List.of() and fix xRef.java bug
Modernize 19 occurrences of Arrays.asList() to use List.of() for
immutable list creation. Also fixes a latent bug in xRef.java where
removeIf() was called on a fixed-size list (would throw
UnsupportedOperationException if that code path was exercised).

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>