@@ -6,7 +6,6 @@ import java.io.DataOutput;
 import java.io.IOException;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -808,7 +807,7 @@ public class ClassStructure
 
         return cActual == cFormal
             ? atypeActual
-            : resolveType(pool, Arrays.asList(atypeActual)).getParamTypesArray();
+            : resolveType(pool, List.of(atypeActual)).getParamTypesArray();
     }
 
     /**
